tests/0008.wgsl.snap
error: Expected ';', found an identifier.

const a = 0xa.fp+2;
               ~
error: Cannot use expression as a statement. Consider using '_ = '.

const a = 0xa.fp+2;
               ~~~
error: Expected ';', found an identifier.

const b = 0x1P+4f;
             ~
error: Cannot use expression as a statement. Consider using '_ = '.

const b = 0x1P+4f;
             ~~~~
error: Expected ';', found an identifier.

const d = 0x3p+2h;
             ~
error: Cannot use expression as a statement. Consider using '_ = '.

const d = 0x3p+2h;
             ~~~~
error: Expected ';', found an identifier.

const e = 0X1.fp-4;
               ~
error: Cannot use expression as a statement. Consider using '_ = '.

const e = 0X1.fp-4;
               ~~~
error: Expected ';', found an identifier.

const f = 0x3.2p+2h;
               ~
error: Cannot use expression as a statement. Consider using '_ = '.

const f = 0x3.2p+2h;
               ~~~~
